# sparrow-tv

./: .cursorrules  .gitignore  Cargo.toml  Dockerfile  bacon.toml  deploy.sh  fetch_examples.sh
app/: bun.lockb  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
app/src/: App.tsx  main.tsx
app/src/components/: tv-player.tsx
app/src/lib/: api.ts
src/: epg.rs  main.rs  parse.rs  parse_alt.rs  playlist.rs  routes.rs
