[package]
name = "sparrow-tv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
dotenvy = "0.15.7"
itertools = "0.12.1"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "time",
    "local-time",
] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
thiserror = "1.0.56"
reqwest = { version = "0.11.23" }
nom = "7.1.3"
anyhow = "1.0.79"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
time = "0.3.34"
